--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "asyncmy>=0.2.10",
+    "cos-python-sdk-v5>=1.9.41",
+    "cryptography>=43.0.0",
+    "faker>=40.1.2",
     "fastapi[standard]>=0.128.0",
     "loguru>=0.7.3",
     "omegaconf>=2.3.0",
