--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -14,15 +14,17 @@ db: # 数据库
 
 log: # 日志
   app:
-    level: INFO # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     to_console: true # 是否输出到控制台
+    to_console_level: INFO # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     to_file: true # 是否输出到文件
+    to_file_level: INFO # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     log_dir: app # 日志目录
     max_file_size: 10MB # 单个日志文件最大大小
   auth:
-    level: INFO # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     to_console: true # 是否输出到控制台
+    to_console_level: ERROR # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     to_file: true # 是否输出到文件
+    to_file_level: INFO # 日志级别(DEBUG, INFO, WARNING, ERROR, CRITICAL)
     log_dir: auth # 日志目录
     max_file_size: 10MB # 单个日志文件最大大小
 
