--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,16 +1,3 @@
 {
-    "python.defaultInterpreterPath": "${workspaceFolder}/backend/.venv/bin/python",
-    "python.terminal.activateEnvironment": true,
-    "python.analysis.autoImportCompletions": true,
-    "files.associations": {
-        "*.py": "python"
-    },
-    "[python]": {
-        "editor.defaultFormatter": "ms-python.python",
-        "editor.formatOnSave": true
-    },
-    "ruff.interpreter": [
-        "${workspaceFolder}/backend/.venv/bin/python"
-    ],
-    "ruff.enable": true
+    "python.defaultInterpreterPath": "${workspaceFolder}/backend/.venv/bin/python"
 }
